@@ -105,7 +105,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                     <argLine>
-                    @{jaCoCoArgLine} --add-opens foodie.rest/foodie.rest=ALL-UNNAMED --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+                    @{jaCoCoArgLine} --add-opens foodie.rest/foodie.rest=ALL-UNNAMED
                     </argLine>
                 </configuration>
             </plugin>
